# picrypt

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh  justfile
.github/workflows/: ci.yml  release.yml
android/: gradlew  gradlew.bat  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/picrypt/widget/: LockConfirmationActivity.kt  LockService.kt  LockWidgetProvider.kt  PicryptApi.kt  PrefsHelper.kt  SettingsActivity.kt  StatusUpdateWorker.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_lock.xml  ic_settings.xml  lock_button_background.xml  widget_background.xml
android/app/src/main/res/layout/: activity_settings.xml  widget_lock.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: lock_widget_info.xml
crates/client/: Cargo.toml  build.rs
crates/client/src/: config.rs  connection.rs  container.rs  daemon.rs  error.rs  lib.rs  main.rs  recovery.rs  veracrypt.rs  volume.rs  yubikey_setup.rs
crates/client/src/platform/: linux.rs  macos.rs  mod.rs
crates/common/: Cargo.toml
crates/common/src/: crypto.rs  error.rs  lib.rs  protocol.rs  yubikey.rs
crates/panic-listener/: Cargo.toml
crates/panic-listener/src/: main.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  error.rs  hardening.rs  keystore.rs  lib.rs  main.rs  state.rs
crates/server/src/api/: admin_token.rs  devices.rs  heartbeat.rs  key.rs  lock.rs  mod.rs  unseal.rs  ws.rs
crates/server/tests/: api_integration.rs  e2e.rs  security.rs
crates/server/tests/helpers/: mod.rs
deploy/: install-client.sh  install-server.sh  picrypt-panic-listener.service  picrypt-server.service
functional-tests/: entry.py  pyproject.toml
functional-tests/common/: base_test.py  persistence_helpers.py  wait.py
functional-tests/common/config/: __init__.py  constants.py
functional-tests/common/services/: __init__.py  server.py
functional-tests/envconfigs/: __init__.py  basic.py
functional-tests/factories/: __init__.py  server.py
functional-tests/tests/basic/: test_auth.py  test_device_revocation.py  test_error_responses.py  test_lock_pin.py  test_multi_device.py  test_rate_limiting.py  test_server_lifecycle.py  test_wrong_password.py
functional-tests/tests/integration/: test_data_persistence_large_file.py  test_data_persistence_many_files.py  test_data_persistence_pi_kill.py  test_dead_mans_switch.py  test_postgres_persistence.py  test_real_usage.py  test_sqlite_persistence.py  test_veracrypt_volume.py
scripts/: harden-linux.sh  harden-macos.sh  harden-windows.ps1  setup-hotkey-linux.sh  setup-hotkey-macos.sh  setup-hotkey-windows.ps1
tests/: e2e-veracrypt.sh  e2e.sh
