[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.9"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.75"
repository = "https://github.com/voidash/picrypt"
homepage = "https://github.com/voidash/picrypt"
authors = ["picrypt contributors"]

[workspace.dependencies]
# Shared
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Crypto
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
base64 = "0.22"

# Server
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "limit"] }

# Client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
dirs = "6"
tempfile = "3"
