[package]
name = "picrypt-client"
description = "picrypt client CLI — fetches per-device VeraCrypt keyfiles from picrypt-server and runs the heartbeat-based dead man's switch"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../../README.md"

[dependencies]
picrypt-common = { path = "../common" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
zeroize = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
clap = { workspace = true }
futures-util = { workspace = true }
dirs = { workspace = true }
toml = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
